app/assets/stylesheets/pages/_show.scss
.heading {
    display: flex;
    align-items: center;

    img.img  { 
        height: 75px;
        border-radius: 37px;
        background-size: cover;
        border: 2px solid grey;
    }

    img {
        height: 30px;
    }

    .location {
        display: flex;
    }
}


.eatery-card {
    height:200px;
    border: 2px solid grey;
    border-radius: 25px;
    // background-image: url("https://images.unsplash.com/photo-1504674900247-0877df9cc836?ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80");
    background-size: cover;
}

.card-btn {
    background-color: rgba(156, 156, 156, 0);
    border-radius: 25px;
    height: 170px;
    z-index: 1;
    position: relative;
    top: 5%;
}

.card-content {
    display: flex;
    align-items: center;
    justify-content: space-between;
    background-color: rgba(95,95,95,0.75);
    position: absolute;
    bottom: 15%;
}

.description {
    line-height: 1;
    margin-top: 10px;
    width: 80%;
}

.description p {
    font-size: 10px;
}

.description h5 {
    font-weight: bold;
}

.price {
    font-size: 24px;
    font-weight: bold;
}

.dis-flex {
    display: flex;
    align-items: center;

    h4 {
        z-index: 1;
    }
}

.dis {
    background-color: rgba(95,95,95,0.75);
    border-top-left-radius: 25px;
    border-top-right-radius: 25px;
    border-bottom: 3px solid rgb(255, 255, 255);
    height: 60px;
    position: relative;
    top: -157px;
}

.nodis {
    background-color: rgba(95,95,95,0);
    border-bottom: none;
}

.tick {
    position: absolute;
    top: 8px;
    left: 90%;
    font-size: 20px;
    font-weight: bold;
}

.notick {
    display: none;
}

.quantity {
    display: none;
}

.show {
    display: block;
}

.shift {
    position: relative;
    top: 0%;
}

.protein {
    background-color: red;
    left: 60%;
}

.carb {
    background-color: green;
    position: absolute;
    left: 73%;
}

.fat {
    background-color: rgb(206, 206, 0);
    position: absolute;
    left: 86%;
}

.circle {
    border: 2px solid grey;
    width: 35px;
    height: 35px;
    border-radius: 25px;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 14px;
    font-weight: bold;
    position: absolute;
    top: 87%;
}

.total {
    position: fixed;
    bottom: 0px;
    background-color: rgb(233, 190, 190);
    padding: 15px;
    width: 100%;
    // height: 220px;

    h3 {
        font-weight: bold;
    }

}

.blank {
    margin-bottom: 200px;
}

.checkbox {
    position: relative;
    top: -150px;
    left: 90%;
}

.macro {
    top: 5%;
    color: white;
}

.radio-label {
    position: relative;
    top: -10px;
}

.radio-div-ht {
    height: 25px;
}


// for order show page


.text-size-ten {
    font-size: 10px; // for table
}

.text-size-twelve {
    font-size: 12px; // for table
}

.text-size-sixteen {
    font-size: 16px; // for table
}

.text-size-fourteen {
    font-size: 14px; // for table
}

.td-width {
    width: 100px; // for table photo td
}

.vertical-align-top td {
    vertical-align: top; // for table
}

.dish-photo {
    object-fit: cover;
    border: 2px solid rgb(190, 190, 190);
    border-radius: 25px;
}

.payment-quantity {
    padding: 0 65px;
}

.payment-unit-price {
    padding: 0 25px;
}

.payment-total {
    padding: 0 15px;
}

.order-position-quantity {
    position: relative;
    left: -20px;
}

.order-position-unit {
    position: relative;
    left: -30px;
}

.order-position-total {
    position: relative;
    left: -30px;
}

.border-sign {
    padding-top: 10px;
    border-top: 2px solid  rgb(190, 190, 190);
    border-bottom: 2px solid  rgb(190, 190, 190); // for table
}

.pending {
    border-left: 2px solid rgb(255,78,96);
    border-right: 2px solid rgb(255,78,96);
    border-radius: 25px;
    font-size: 20px;
    color: rgb(255,78,96);
}

